--- a/demo-orm-mybatis/pom.xml
+++ b/demo-orm-mybatis/pom.xml
@@ -30,6 +30,11 @@
             <version>${mybatis.version}</version>
         </dependency>
 
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-aop</artifactId>
+      </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
