--- a/demo-orm-mybatis/src/main/resources/application.yml
+++ b/demo-orm-mybatis/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/spring-boot-demo?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
-    username: root
-    password: root
+    password: yunshun!123
+    username: yunshuntest
+    url: jdbc:mysql://rm-m5e3391athg84493qko.mysql.rds.aliyuncs.com:3306/yunshun_01?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
     initialization-mode: always
     continue-on-error: true
-    schema:
-    - "classpath:db/schema.sql"
-    data:
-    - "classpath:db/data.sql"
+#    schema:
+#    - "classpath:db/schema.sql"
+#    data:
+#    - "classpath:db/data.sql"
     hikari:
       minimum-idle: 5
       connection-test-query: SELECT 1 FROM DUAL
